--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -141,8 +141,8 @@
 
 
 <script type="module">
-    import {checkToken, fetchWithJwtAuth} from "/js/auth.js";
-    import {logout} from "../static/js/auth";
+    import {checkToken, fetchWithJwtAuth, logout} from "/js/auth.js";
+
 
     checkToken();
 
