--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -99,6 +99,7 @@
             <button type="submit" class="bg-green-500 text-white w-full px-4 py-2 rounded-lg">회원가입
             </button>
         </div>
+        <input TYPE="hidden" id="oauth" value="LOCAL">
     </form>
 </div>
 
@@ -213,7 +214,6 @@
             }),
             success: function (response) {
                 alert('회원가입이 완료되었습니다.');
-                localStorage.setItem("username", username);
                 window.location.href = '/register_information';
             },
             error: function (xhr, status, error) {
