--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -62,6 +62,9 @@
             right: 10px;
         }
     </style>
+    <link rel="icon"
+          href="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96"
+          type="image/x-icon">
 </head>
 <body class="bg-gray-100 text-black">
 <header class="flex justify-between items-center p-4 bg-white shadow">
