front 로그인 회원가입 상세페이지 연동

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -199,7 +199,7 @@
         }
 
         $.ajax({
-            url: "/auth/signup", // api
+            url: "/api/v1/signup", // api
             type: "post",
             contentType: "application/json",
             dataType: "json",
