--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,74 +53,32 @@
     </div>
 
     <script type="module">
-        // 스테틱은 접근 불가
-        import {setToken} from "/js/auth.js";
-
-        //  helloWorld();
-        document.addEventListener("DOMContentLoaded", function () {
-            const urlParams = new URLSearchParams(window.location.search);
-            const error = urlParams.get('error');
-            if (error === "Unauthorized") {
-                alert("로그인 후 이용해주세요")
-            }
-        });
-
-
-        document.getElementById('loginForm').addEventListener('submit', function (event) {
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
             event.preventDefault();
 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            fetch('/auth/login', {
+            fetch('/users/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({username, password}),
-                credentials: 'include'
+                body: JSON.stringify({ username, password })
             })
-                .then(response => {
-                    console.log('로그인 응답 상태:', response.status);
-                    if (response.ok) {
-                        return response.json();
-                        // window.location.href = '/main';
-                    } else {
-                        document.getElementById('error').style.display = 'block';
-                    }
-                })
-                .then(data => {
-                    console.log('Response JSON:', data);
-                    if (data && data.data.token) {
-                        setToken(data.data.token);
-                        console.log("로그인 성공")
-                        window.location.href = "/main.html"
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
+            .then(response => {
+                if (response.ok) {
+                    localStorage.setItem('username', username);
+                    window.location.href = '/main';
+                } else {
                     document.getElementById('error').style.display = 'block';
-                });
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                document.getElementById('error').style.display = 'block';
+            });
         });
-        //  fetch('/auth/local', {
-        //       method: 'POST',
-        //       headers: {
-        //           'Content-Type': 'application/json'
-        //       },            body: JSON.stringify({ username, password })
-        //   })
-        //       .then(response => {
-        //           if (response.ok) {
-        //                       localStorage.setItem("username", username);
-        //                      window.location.href = '/main';
-        //           } else {
-        //              document.getElementById('error').style.display = 'block';
-        //           }           })
-        //       .catch(error => {
-        //           console.error('Error:', error);
-        //           document.getElementById('error').style.display = 'block';
-        //       });
-        //   });
-
     </script>
 
 </div>
